k8s-manifests/base/webhook-environment/mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: deception-python-webhook
webhooks:
  - name: deception-python-webhook.deception.svc.cluster.local
    admissionReviewVersions:
      - "v1"
    sideEffects: "None"
    timeoutSeconds: 5
    clientConfig:
      service:
        name: deception-python-webhook
        namespace: deception
        path: "/add-deception"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURjRENDQWxpZ0F3SUJBZ0lVWks5TDcyRFVSZzJJTkp6Z3l1MExnNmlaczBBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1VERUxNQWtHQTFVRUJoTUNRVlF4RFRBTEJnTlZCQWdUQkZkcFpXNHhEVEFMQmdOVkJBY1RCRmRwWlc0eApFREFPQmdOVkJBb1RCME52YlhCaGJua3hFVEFQQmdOVkJBc1RDRkpsYzJWaGNtTm9NQjRYRFRJek1EVXpNVEV3Ck1UTXdNRm9YRFRJNE1EVXlPVEV3TVRNd01Gb3dVREVMTUFrR0ExVUVCaE1DUVZReERUQUxCZ05WQkFnVEJGZHAKWlc0eERUQUxCZ05WQkFjVEJGZHBaVzR4RURBT0JnTlZCQW9UQjBOdmJYQmhibmt4RVRBUEJnTlZCQXNUQ0ZKbApjMlZoY21Ob01 [...]
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: deception-dev
    rules:
      - operations: ["CREATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["pods"]
        scope: "Namespaced"
    failurePolicy: Ignore
